Added API Information Page

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "buscador-recetas",
+  "name": "PokeAPI",
   "version": "1.0.0",
   "description": "Proyecto final Bedu - Buscador de recetas",
   "main": "index.js",
